--- a/buckets.yaml
+++ b/buckets.yaml
@@ -8,6 +8,6 @@ Resources:
 Outputs:
   BucketName:
     Value: !Ref CodeBucket
-    Description: Name of the sample Amazon S3 bucket with the source code for lambda functions.
+    Description: Name of the sample Amazon S3 bucket with the source code for all lambda functions. 
     Export:
       Name: !Sub "${AWS::StackName}-CodeBucketName"
