--- a/test_config.yaml
+++ b/test_config.yaml
@@ -5,6 +5,8 @@ phases:
   install:
     runtime-versions:
       python: 3.8
+    commands:
+      - pip3 install unittest
 
   build:
     commands:
