--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,6 +28,9 @@ jobs:
         with:
           python-version: '3.9'
       - run: python zip_my_files.py
+      - uses: montudor/action-zip@v1
+        with:
+          args: code -qq -r code.zip dir
 
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
