--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,9 +28,12 @@ jobs:
         with:
           python-version: '3.9'
       - run: python zip_my_files.py
-      - uses: montudor/action-zip@v1
+      - name: Archive Release
+        uses: thedoctor0/zip-release@main
         with:
-          args: code -qq -r code.zip dir
+        type: 'zip'
+        filename: 'release.zip'
+        exclusions: '*.git* /*node_modules/* .editorconfig'
 
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
