--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,6 +32,7 @@ jobs:
         uses: thedoctor0/zip-release@main
         with:
           type: 'zip'
+          directory: 'zips'
           filename: 'release.zip'
           exclusions: '*.git* /*node_modules/* .editorconfig'
 
