--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,14 +27,8 @@ jobs:
       - uses: actions/setup-python@v3
         with:
           python-version: '3.9'
-      - run: python zip_my_files.py
-      - name: Archive Release
-        uses: thedoctor0/zip-release@main
-        with:
-          type: 'zip'
-          directory: 'zips'
-          filename: 'release.zip'
-          exclusions: '*.git* /*node_modules/* .editorconfig'
+      - name: Zip files
+        run: python zip_my_files.py
 
         # Runs a set of commands using the runners shell
       - name: Commit files
