--- a/templates/github.yaml
+++ b/templates/github.yaml
@@ -105,6 +105,7 @@ Resources:
             RoleArn: !Ref PipelineRole
             StackName: !Ref ApiGatewayStackName
             TemplatePath: !Sub "SourceCode::templates/api_gateway.yaml"
+          DependsOn: LambdaDeploy
           RunOrder: 1     
 
 
