--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -44,6 +44,11 @@ jobs:
             echo "::set-output name=push::true"
           fi
         shell: bash
+      -name: Pull
+        run: |
+          git config --local user.email "Ghadasz@interia.eu"
+          git config --local user.name "hadaszm"
+          git pull
       - name: Push changes
         if: steps.commit.outputs.push == 'true'
         uses: ad-m/github-push-action@master
