--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-# This is a basic workflow to help you get started with Actions
+ This is a basic workflow to help you get started with Actions
 
 name: CI
 
@@ -6,9 +6,9 @@ name: CI
 on:
   # Triggers the workflow on push or pull request events but only for the main branch
   push:
-    branches: [ new ]
+    branches: [ main ]
   pull_request:
-    branches: [ new ]
+    branches: [ main ]
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
@@ -44,11 +44,6 @@ jobs:
             echo "::set-output name=push::true"
           fi
         shell: bash
-      -name: Pull
-        run: |
-          git config --local user.email "Ghadasz@interia.eu"
-          git config --local user.name "hadaszm"
-          git pull
       - name: Push changes
         if: steps.commit.outputs.push == 'true'
         uses: ad-m/github-push-action@master
