--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -37,5 +37,12 @@ jobs:
           git config --local user.email "Ghadasz@interia.eu"
           git config --local user.name "hadaszm"
           git add --all
-          git push
+          if [-z "$(git status --porcelain)"]; then
+            echo "::set-output name=push::false"
+          else
+            git commit -m "Add changes" -a
+            git push
+            echo "::set-output name=push::true"
+          fi
+        shell: bash
 
