--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,11 +3,15 @@
 name: CI
 
 # Controls when the workflow will run
-on: push
+on:
   # Triggers the workflow on push or pull request events but only for the main branch
+  push:
+    branches: [ branch ]
+  pull_request:
+    branches: [ branch ]
 
   # Allows you to run this workflow manually from the Actions tab
-
+  workflow_dispatch:
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
@@ -29,6 +33,9 @@ jobs:
         # Runs a set of commands using the runners shell
       - name: Commit files
         id: commit
+        uses: ad-m/github-push-action@master
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
         run: |
           git config --local user.email "Ghadasz@interia.eu"
           git config --local user.name "hadaszm"
@@ -38,6 +45,7 @@ jobs:
           else
             git commit -m "Add changes" -a
             git push -f
+            
             echo "::set-output name=push::true"
           fi
         shell: bash
